--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="fecha_final">Fecha final</string>
     <string name="generar_reporte">Generar reporte</string>
     <string name="no_hay_registros">No se encontraron registros dentro de las fechas asignadas.</string>
+    <string name="fecha_inicial_menor_fecha_final">Recuerde que la fecha de inicio debe ser anterior a la fecha final</string>
 </resources>
